Kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sifon
  namespace: sifon
  labels:
    app: sifon
spec:
  selector:
    matchLabels:
      app: sifon
  replicas: 1
  template:
    metadata:
      labels:
        app: sifon
    spec:
      volumes:
      - name: vol
        persistentVolumeClaim:
          claimName: pvc
      terminationGracePeriodSeconds: 30
      containers:
      - name: sifon
        image: martinmiles/sifonuk
        imagePullPolicy: "Always"
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: "/app/wwwroot/content"
            name: vol
