Kubernetes/ingress-https.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/acme-challenge-type: http01
    certmanager.k8s.io/cluster-issuer: letsencrypt
  name: ingress-sifon
  namespace: sifon
spec:
  rules:
  - host: sifon.uk
    http:
      paths:
      - backend:
          serviceName: sifon-service
          servicePort: 80
  tls:
  - hosts:
    - sifon.uk
    secretName: tls-cert
