Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sifon
  namespace: sifon
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: sifon.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sifon-service
            port:
              number: 80
